# nicegui-rdm

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: publish.yml
docs/: api.md  facts.md  feature_requests.md
scripts/: check_styles.py  demo_app.py  make_demo_gif.py  make_master_detail_gif.py
src/ng_loba/: __init__.py
src/ng_loba/crud/: __init__.py  _table_base.py  action.py  action_table.py  base.py  checkbox.py  crud.css  crud.scss  detail.py  dialog.py  direct.py  edit_card.py  explicit.py  fields.py  i18n.py  keyboard.py  list.py  modal.py  navigate.py  nicecrud.css  protocol.py  select.py  selection.py  styles.scss  table.py  tabs.py  view_stack.py  wizard.py
src/ng_loba/examples/: README.md  all_users.py  crud.scss  crud_direct.py  crud_explicit.py  main.py  org_demo.py  showcase.py  test-quasar.py
src/ng_loba/models/: __init__.py  qmodel.py  types.py
src/ng_loba/refreshable/: core.py
src/ng_loba/store/: __init__.py  base.py  multitenancy.py  orm.py
src/ng_loba/utils/: __init__.py  keyboard.py  logging.py  types.py
src/ng_rdm/: __init__.py  page.py
src/ng_rdm/components/: API.md  __init__.py  action_button_table.py  base.py  button.py  data_table.py  detail.py  dialog.py  edit_card.py  edit_dialog.py  fields.py  i18n.py  list.py  list_table.py  ng_rdm.css  protocol.py  reactive.py  selection.py  table.py  tabs.py  view_stack.py  wizard.py
src/ng_rdm/components/widgets/: __init__.py  action_button_table.py  button.py  detail_card.py  dialog.py  edit_card.py  edit_dialog.py  layout.py  list_table.py  selection.py  selection_table.py  tabs.py  view_stack.py  wizard.py
src/ng_rdm/debug/: __init__.py  event_log.py  page.py
src/ng_rdm/examples/: README.md  catalog.py  chips.py  custom_datasource.py  custom_table.py  examples.css  in_row_editing.py  large_dataset.py  master_detail.py  multitenant.py  showcase.py  test_buttons.py  topic_filtering.py  tortoise_store.py  vanilla_store.py
src/ng_rdm/examples/.nicegui/: storage-user-140975f9-2fa7-46e1-8969-8004cfd0f4c6.json  storage-user-1bcf9619-bb57-432a-8478-809975497f5b.json  storage-user-1be5f424-1545-48bc-aa44-3bdfcaa57783.json  storage-user-487b2163-a019-48a1-899a-7b17ca60e5b2.json  storage-user-719052ef-de8c-4b98-a553-936553a0bf69.json  storage-user-74832577-3853-4fe5-b298-85f8781bd171.json  storage-user-7e6bde44-e32c-4293-8b42-af86f76972ed.json  storage-user-ae6b8ce0-d036-49c9-9696-257c7585967e.json  storage-user-afdd6cc1-f3ab-4e5b-b7d0-b72fcaf7d068.json  storage-user-e85d6a5c-bd11-423e-88d7-493791a7f55b.json  storage-user-eaaa337f-0d0a-45ab-92d2-2386ce08914b.json  storage-user-eb906218-cecf-4e36-b593-00c383df2036.json
src/ng_rdm/examples/components/: __init__.py  (+4 more)
src/ng_rdm/models/: __init__.py  mt_rdm_model.py  rdm_model.py  types.py
src/ng_rdm/refreshable/: core.py
src/ng_rdm/store/: __init__.py  base.py  dict_store.py  multitenancy.py  notifier.py  orm.py
src/ng_rdm/utils/: __init__.py  helpers.py  logging.py
src/ng_store/: __init__.py  page.py
src/ng_store/components/: __init__.py  base.py  detail.py  dialog.py  edit_dialog.py  i18n.py  nicecrud.css  protocol.py  table.py  tabs.py  view_stack.py  wizard.py
src/ng_store/models/: qmodel.py
src/ng_store/refreshable/: __init__.py
src/ng_store/store/: base.py
src/ng_store/utils/: helpers.py  logging.py
tests/: conftest.py  test_multitenancy.py  test_notifier.py  test_orm.py  test_store.py  test_utils.py
tests/components/: conftest.py  test_base.py  test_detail_card.py  test_dialog.py  test_edit.py  test_i18n.py  test_layout.py  test_navigation.py  test_poc.py  test_reactive.py  test_tables.py  test_wizard.py
typings/nicegui/functions/: refreshable.pyi
(+7 files in other folders)
