[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ng-store"
version = "0.1.0"
description = "Reactive state management for NiceGUI with Tortoise ORM"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "nicegui>=1.4.0",
    "tortoise-orm>=0.20.0",
    "pytz",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
addopts = "-W ignore::DeprecationWarning -W ignore::PendingDeprecationWarning -W ignore::pytest.PytestDeprecationWarning -v"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
