[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nicegui-rdm"
version = "0.1.2"
description = "Reactive Data Management for NiceGUI with Tortoise ORM"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Peter Kleynjan" },
]
keywords = ["nicegui", "tortoise-orm", "reactive", "data-management", "crud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "nicegui>=3.0,<4.0",
    "tortoise-orm>=1.0.0,<2.0.0",
    "pytz",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/kleynjan/nicegui-rdm"
Repository = "https://github.com/kleynjan/nicegui-rdm"

[tool.hatch.build.targets.wheel]
packages = ["src/ng_rdm"]
exclude = ["*.sqlite3"]

[tool.pytest.ini_options]
addopts = "-W ignore::DeprecationWarning -W ignore::PendingDeprecationWarning -W ignore::pytest.PytestDeprecationWarning -v"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
main_file = ""
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "components: component/widget UI tests using NiceGUI User fixture",
]
